fix header overlap

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ h3 {
 
 .header-container {
 	width: 100%;
-	height: 180px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -43,7 +42,7 @@ h3 {
 
 .header-top-row {
 	padding-top: 36px;
-	padding-bottom: 20px;
+	padding-bottom: 8px;
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
